# image_measurement

./: .gitignore  CMakeLists.txt  LICENSE  README.md
1-image-smoothing-and-image-enhancement/: CMakeLists.txt  readme.md
1-image-smoothing-and-image-enhancement/src/: image-smoothing.cpp  image_enhacement.cpp  image_smoothing.cpp
2-image-edge-detection/: CMakeLists.txt  readme.md
2-image-edge-detection/src/: image_edge_detection.cpp
3-image-thresholding-and-image-refinement/: CMakeLists.txt  readme.md
3-image-thresholding-and-image-refinement/src/: image_refinement.cpp  image_thresholding.cpp
4-area-measuring/: CMakeLists.txt  readme.md
4-area-measuring/output/: print log
4-area-measuring/src/: area_measuring.cpp
5-area-boundary-extraction-and-perimeter-calculation/: CMakeLists.txt  readme.md
5-area-boundary-extraction-and-perimeter-calculation/output/: print log
5-area-boundary-extraction-and-perimeter-calculation/src/: area_boundary_extraction_and_perimeter_calculation.cpp
