SET(PROJECT_NAME area-boundary-extraction-and-perimeter-calculation)

PROJECT(${PROJECT_NAME})
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++11")
SET(CMAKE_BUILD_TYPE RELEASE)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ./src/area_boundary_extraction_and_perimeter_calculation.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
